made the PDF file look nice and double sided for easy flash card making

--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="resources"/>
 	<classpathentry kind="lib" path="jackson-annotations-2.18.3.jar"/>
 	<classpathentry kind="lib" path="jackson-core-2.18.3.jar"/>
 	<classpathentry kind="lib" path="jackson-databind-2.18.3.jar"/>
