--- a/.classpath
+++ b/.classpath
@@ -11,5 +11,6 @@
 	<classpathentry kind="lib" path="jackson-core-2.18.3.jar"/>
 	<classpathentry kind="lib" path="jackson-databind-2.18.3.jar"/>
 	<classpathentry kind="lib" path="itextpdf-5.5.13.3.jar"/>
+	<classpathentry kind="lib" path="gson-2.10.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
